# iree

./: .gitmodules  BUILD.bazel  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  SUBMODULE_VERSIONS.txt  True
.github/workflows/: build_package.yml  schedule_candidate_release.yml
build_tools/bazel/: workspace.bzl
build_tools/cmake/: iree_check_test.cmake  iree_external_cmake_options.cmake  riscv.toolchain.cmake
build_tools/embed_data/: generate_embed_data_main.cc
build_tools/python_deploy/: build_linux_packages.sh  build_windows_packages.ps1
compiler/: setup.py
compiler/bindings/python/: CMakeLists.txt
experimental/cuda2/: cuda_device.c
experimental/hal/: allocator_caching.c
experimental/level_zero/: CMakeLists.txt  descriptor_set_layout.c  descriptor_set_layout.h  direct_command_buffer.c  direct_command_buffer.h  dynamic_symbol_tables.h  event_semaphore.c  executable_layout.c  executable_layout.h  level_zero_allocator.c  level_zero_device.c  level_zero_driver.c  level_zero_event.c  level_zero_event.h  native_executable.c  native_executable.h  nop_executable_cache.c
experimental/level_zero/cts/: CMakeLists.txt
experimental/rocm/: CMakeLists.txt  api.h  direct_command_buffer.c  dynamic_symbol_tables.h  hip_headers.h  native_executable.c  native_executable.h  rocm_allocator.c  rocm_allocator.h  rocm_buffer.c  rocm_device.c  rocm_driver.c  rocm_headers.h  stream_command_buffer.c  stream_command_buffer.h
experimental/rocm/cts/: CMakeLists.txt
experimental/rocm/registration/: CMakeLists.txt  driver_module.c
experimental/tritonizer/: CMakeLists.txt
iree/compiler/Codegen/: Passes.h  Passes.td
iree/hal/: CMakeLists.txt  allocator_caching.c  api.h  buffer.c  buffer_caching.c  buffer_caching.h
iree/hal/cuda/: api.h  cuda_allocator.c  cuda_buffer.c  (+1 more)
iree/runtime/: session.c
iree/samples/static_mul/: CMakeLists.txt  linalg_mul.mlir  static_library_demo.c
iree/test/: CMakeLists.txt
iree/tools/: CMakeLists.txt  init_iree_dialects.h  init_iree_passes.h  iree-benchmark-module-main.cc  iree-linalg-matmul-counter.cc
matvec-bench/: README.md  run.sh  target-spirv.mlir  vmt.mlir
runtime/: setup.py
scripts/: .gitignore  README.md  attention_gfx1100.spec.mlir  attention_gfx1103.spec.mlir  attention_gfx942.spec.mlir  attention_wmma.mlir  benchmark_dynamic_matmul.sh  compile-unet-leches.sh  compile_llama.sh  compile_matmul.sh  dynamic_matmul_1.mlir  matmul_top_2.mlir  matmul_top_3.mlir  requirements.txt  run_e2e.py  spec.mlir
tools/: BUILD.bazel  CMakeLists.txt  iree-e2e-matmul-test.c
(+398 files in other folders)
